--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Burger Buddy</title>
-    <link rel="icon" type="image/x-icon" href="Image/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="WebPage/Image/favicon.ico" />
 </head>
 
 <body>
-    <h1><img src="Image/robot.png" alt="Burger Buddy" />Burger Buddy</h1>
+    <h1><img src="WebPage/Image/robot.png" alt="Burger Buddy" />Burger Buddy</h1>
     <hr />
 
     <h2>Franchises / Burger Types</h2>
